--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
 		<div id="content">
 			<h2>Home</h2>
 			<p>
-				This is First Commit
+				This is First Commit for APP1
 			</p>
 		</div>
 	</div>
